# circle-cli

./: .gitignore  README.md  justfile  pyproject.toml
.claude/: settings.local.json
agent-skill/: SKILL.md
src/circle/: api.py  api_types.py  cache.py  cache_manager.py  cached_api.py  cli.py  config.py  flags.py  git.py  output.py  service.py  status_filter.py  summary.py
src/circle/claude_skill/: SKILL.md
src/circle/output/: __init__.py  _common.py  _core.py  _markdown.py  _pretty.py
src/circle/server/: __init__.py  main.py
src/circle/server/components/: layout.py
src/circle/server/pages/: home.py
src/circle/server/templates/: index.html  layout.html
tests/: conftest.py  test_cache_manager.py  test_circle.py  test_config.py  test_service.py  test_status_filter.py  test_summary.py
