[project]
name = "circle"
version = "0.9.0"
description = "CircleCI CLI to view pipelines, workflows, jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts~=4.0",
    "rich~=14.0",
    "pydantic~=2.0",
    "diskcache~=5.6",
    "httpx~=0.28",
    "platformdirs~=4.5",
    "humanize~=4.15",
    "tabulate>=0.9.0",
]


[project.scripts]
circle = "circle.cli:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "time-machine>=3.2.0",
    "ty>=0.0.14",
]
